assets/scss/organisms/modals/_leader-modal.scss
.leader-modal {

    .modal-content {
        max-width: 1156px;
        padding: 17px 19px;

        @include breakpoint(small only) {
            padding: 0 12px;
        }

        .btn-close {
            top: auto;
            right: auto;
            outline: none;
            margin-left: auto;
            position: relative;
        }

        .content-wrapper {
            overflow: auto;
            padding: 86px 99px 131px;

            @include breakpoint(small only) {
                padding: 0 0  62px;
            }
        }

        .modal-heading {
            background: $white;
            position: relative;

            @include breakpoint(small only) {
                padding: 9px 7px 8px;
            }
        }
    }

    .leader-info {
        max-width: 450px;
        margin-left: 25px;

        @include breakpoint(small only) {
            margin: 0 auto;
            max-width: none;
            padding: 33px 29px;
        }

        .leader-bio {
            margin-top: 40px;

            @include breakpoint(small only) {
                margin-top: 26px;
            }
        }

        .leader-titles {
            margin-top: 12px;
        }
    }

    .leader-photo {
        flex-shrink: 0;

        @include breakpoint(small only) {
            text-align: center;
        }

        img {
            width: 100%;
            max-width: 330px;

            @include breakpoint(small only) {
                max-width: 336px;
            }
        }
    }
}

